﻿
18/12/2015:
* REFACT: more tyvars again: VarPrinterState module rewritten because static members were not suitable for the purpose, as they introduce unit closures


15/12/2015:
* REFACT: var class reworked: former private module for effecting normalization has now become a bunch of static private members; normalization now
          keeps possible var name
* REFACT: all prefixes in prompt have now become configurable; prompt prefixes are also trimmed and flattened more consistently now


14/12/2015:
* REFACT: many minor changes are reworks, also involving named type variables


10/12/2015:
* REFACT: support for named type variables: var type reworked and scoping rules of named type variables implemented


23/12/2015:
* REFACT: closed-world overloading introduced: no need for the 'overload' declaration; 'let over' at will; locally resolved via a special tag for constraints


18/11/2015:
* first GitHub publish
* started writing of documentation on README.md


9/11/2015: [v0.8.0]
* all code migrated to F# 4.0 and .NET 4.6


4/11/2015:
* FIX: usage of substitution composition was sometimes wrong: arguments were inverted in some cases, now should be fixed
* UP: substitution composition implementation was quite optimized but might have led to unexpected results: now it's been implemented using second
      operand domain restriction, as in "https://en.wikipedia.org/wiki/Substitution_(logic)"


3/11/2015:
* FIX: eval cancellation and ctrl-c handling has finally been fixed
* REFACT: V_Redux values now take an Eval.context as extra argument in the closure part of the pair: this makes cancellation possible by passing the
          context at the time when the beta redux occurs
* NEW: dynamic configuration sub-system for run-time flags: basically it consists of a singleton class with getter/setter properties
* UP: support for Unicode symbols and greek letters for type variables based on actual .NET console capabilities